syntax = "proto3";

option go_package = ".;metadata";
package pb_metadata;

service MetadataServer {
  rpc GetMetadata(GetMetadataRequest) returns (MetadataResponse) {}
  rpc PutMetadata(MetadataRequest) returns (MetadataResponse) {}
}

message GetMetadataRequest {
  string app = 1;
  string event_name = 2;
}

message  Field {
  string name = 1;
  string type = 2;
  string field = 3;
}

message MetadataRequest {
  string app = 1;
  string event_name = 2;
  repeated Field fields = 3;
}

message MetadataResponse {
  repeated Field metadata = 1;
}


